# ror-multigame-autosplitter

./: Cargo.toml  README.md
src/: autosplitter.rs  game.rs  lib.rs
src/game/: risk_of_rain.rs  risk_of_rain_2.rs  risk_of_rain_returns.rs
